front-end/src/app/gameroom/rook-card/rook-card.component.css
:host {
    position: relative;
    width: 20%;
    padding-top: 26%;
    perspective: 600px;
    transform-style: preserve-3d;
    transition: 0.2s;
}

.face {
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
}

.card {
    cursor: pointer;
    top: 0;
    border-color: rgb(208, 208, 208);
    opacity: 1;
    border-width: 1px;
    border-style: solid;
    color: black;
    background-color: white;
    font-size: 30pt;
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 10px;
    box-shadow: 2px 2px 2px 1px rgba(232, 232, 232, 0.2);
    transition: 0.2s;
    transform-style: preserve-3d;
}

.faces {
    border-radius: 10px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

.front {
    transform: rotateY(180deg);
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

.back-card {
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    position: absolute;
    top: 1rem;
    bottom: 1rem;
    right: 1rem;
    left: 1rem;
    background: rgba(29, 108, 255, 0.644);
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.kitty-card:not(:first-child) {
    margin-left: -10rem!important;
}

.crow {
    color: white;
    background-repeat: no-repeat;
    width: 70%;
    height: 100%;
    background-size: contain;
    background-position: center center;
    background-image: url(../../../assets/img/crow.svg);
}

:host:not(:first-child) {
    margin-left: -4rem;
}

:host:hover~.card,
:host:focus-within~.card {
    transform: translateX(4rem);
}

:host:hover {
    transform: translateY(-1rem);
}

.inner_boarder {
    position: absolute;
    width: 100%;
    text-align: center;
    height: 50%;
}

.card_color {
    font-size: 40%;
    left: 2.2em;
    top: 0.3em;
    text-align: center;
}

.number_of_points {
    font-weight: bold;
    color: white;
    background-color: black;
    font-size: 40%;
    left: 2.3em;
    top: 1.3em;
    text-align: center;
    width: 25px;
    border-radius: 5px;
}

.front {
    background-color: #ffffff;
    color: #000000;
    position: absolute;
    width: 100%;
    height: 100%;
}

.right-of-number {
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    vertical-align: top;
    margin-top: 10px;
    margin-left: 5px;
    font-size: 30px;
    font-weight: 500;
}

.number_top_left {
    display: inline-block;
    font-size: 100%;
    color: black;
    font-weight: bold;
    text-align: center;
    left: 10px;
}

.top-left-content {
    position: absolute;
    left: 10px;
    top: 0px;
}

.number_bottom_right {
    font-size: 100%;
    color: black;
    font-weight: bold;
    text-align: center;
    position: absolute;
    right: 10px;
    bottom: 0px;
}

.number_middle {
    font-size: 150%;
    color: white!important;
    font-weight: bold;
    text-align: center;
    right: 35%;
    bottom: 35%;
    border-radius: 50%;
    width: 90px;
    height: 90px;
}

.flex-center {
    height: 100%;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%
}

.flex-center-h {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%
}

.flex-absolute-container {
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
}

